
  FEATURES:

   * New ``reconfigure`` command. (Aaron Bentley)

   * New ``revert --forget-merges`` command, which removes the record of a pending 
     merge without affecting the working tree contents.  (Martin Pool)

   * New ``bzr_remote_path`` configuration variable allows finer control of
     remote bzr locations than BZR_REMOTE_PATH environment variable.
     (Aaron Bentley)

  PERFORMANCE:

   * Commit in quiet mode is now slightly faster as the information to
     output is no longer calculated. (Ian Clatworthy)

   * Commit no longer checks for new text keys during insertion when the
     revision id was deterministically unique. (Robert Collins)

   * Committing a change which is not a merge and does not change the number of
     files in the tree is faster by utilising the data about whether files are
     changed to determine if the tree is unchanged rather than recalculating
     it at the end of the commit process. (Robert Collins)

   * Inventory serialisation no longer double-sha's the content.
     (Robert Collins)

   * Partial commits are now approximately 40% faster by walking over the
     unselected current tree more efficiently. (Robert Collins)

   * XML inventory serialisation takes 20% less time while being stricter about
     the contents. (Robert Collins)

  IMPROVEMENTS:

   * ``bzr+https://`` smart server across https now supported. 
     (John Ferlito, Martin Pool, #128456)

   * Mutt is now a supported mail client; set ``mail_client=mutt`` in your
     bazaar.conf and ``send`` will use mutt. (Keir Mierle)

   * New option ``-c``/``--change`` for ``merge`` command for cherrypicking 
     changes from one revision. (Alexander Belchenko, #141368)

   * Show encodings, locale and list of plugins in the traceback message.
     (Martin Pool, #63894)

  BUG FIXES:

   * Commands reporting exceptions can now be profiled and still have their
     data correctly dumped to a file. For example, a ``bzr commit`` with